<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/kungfu"
    tools:context="com.example.android.karatecounter.MainActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/material_padding_2"
                        android:text="@string/Red"
                        android:textColor="#D50000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/material_margin_5"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/Nulla"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp"
                        android:textStyle="bold"

                        />

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/threebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/three"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/IPPON"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/twobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/two"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/WAZAARI"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/onebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/one"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/YUKO"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>



                    <TextView
                        android:id="@+id/team_a_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/material_margin_5"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/Nulla"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold"

                        />
                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/warninga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_6"
                        app:button_icon="@drawable/w"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/WARNING"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>


                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF">

                </View>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/material_padding_2"
                        android:text="@string/Blue"
                        android:textColor="#1A237E"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/material_margin_5"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/Nulla"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp"
                        android:textStyle="bold"

                        />

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/threebuttonb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/three"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/IPPON"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>


                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/twobuttonb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/two"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/WAZAARI"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/onebuttonb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_4"
                        app:button_icon="@drawable/one"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/YUKO"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>



                    <TextView
                        android:id="@+id/team_b_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/material_margin_5"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/Nulla"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold"

                        />

                    <br.com.bloder.magic.view.MagicButton
                        android:id="@+id/warningb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:magic_button_size="50dp"
                        android:layout_marginBottom="@dimen/material_margin_4"
                        android:layout_marginLeft="@dimen/material_margin_6"
                        android:layout_marginTop="@dimen/material_margin_6"
                        app:button_icon="@drawable/w"
                        app:button_icon_width="25dp"
                        app:button_icon_height="25dp"
                        app:hide_text="@string/WARNING"
                        app:hide_text_size="5sp"
                        app:hide_text_color="#000000"
                        app:expandable_area_color="#E0E0E0"/>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/material_margin_3"
                android:layout_marginTop="@dimen/material_margin_3"
                android:onClick="Reset"
                android:text="@string/RESET"
                android:textColor="#000000" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>



